// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StyledButton /> <StyledButton /> icons should render the add back 1`] = `
.c0 {
  height: 30px;
  padding: 0 30px;
  font-family: 'LatoSemiBold';
  font-size: 13px;
  line-height: 100%;
  border-radius: 3px;
  cursor: pointer;
  outline: 0;
  background-image: linear-gradient(to right top,#306ded,#2f78f1,#3283f3,#3a8ef6,#4598f7);
  color: #ffffff;
  border: 0;
}

.c0:hover {
  -webkit-box-shadow: inset 0 0 30px rgba(0,0,0,0.1);
  -moz-box-shadow: inset 0 0 30px rgba(0,0,0,0.1);
  box-shadow: inset 0 0 30px [object Object];
}

.c0:active {
  -webkit-box-shadow: inset 0 0 30px rgba(0,0,0,0.1);
  -moz-box-shadow: inset 0 0 30px rgba(0,0,0,0.1);
  box-shadow: inset 0 0 30px [object Object];
}

.c0::before {
  font-family: 'FontAwesome';
  font-weight: 600;
  font-size: 14px;
  margin-right: 10px;
  line-height: 100%;
  display: inline-block;
  vertical-align: middle;
}

.c0::before {
  content: '\\f053';
}

<button
  className="c0"
  color="primary"
  type="button"
/>
`;

exports[`<StyledButton /> <StyledButton /> icons should render the add icon 1`] = `
.c0 {
  height: 30px;
  padding: 0 30px;
  font-family: 'LatoSemiBold';
  font-size: 13px;
  line-height: 100%;
  border-radius: 3px;
  cursor: pointer;
  outline: 0;
  background-image: linear-gradient(to right top,#306ded,#2f78f1,#3283f3,#3a8ef6,#4598f7);
  color: #ffffff;
  border: 0;
}

.c0:hover {
  -webkit-box-shadow: inset 0 0 30px rgba(0,0,0,0.1);
  -moz-box-shadow: inset 0 0 30px rgba(0,0,0,0.1);
  box-shadow: inset 0 0 30px [object Object];
}

.c0:active {
  -webkit-box-shadow: inset 0 0 30px rgba(0,0,0,0.1);
  -moz-box-shadow: inset 0 0 30px rgba(0,0,0,0.1);
  box-shadow: inset 0 0 30px [object Object];
}

.c0::before {
  font-family: 'FontAwesome';
  font-weight: 600;
  font-size: 14px;
  margin-right: 10px;
  line-height: 100%;
  display: inline-block;
  vertical-align: middle;
}

.c0::before {
  content: '\\f067';
}

<button
  className="c0"
  color="primary"
  type="button"
/>
`;

exports[`<StyledButton /> <StyledButton /> icons should render the add trash 1`] = `
.c0 {
  height: 30px;
  padding: 0 30px;
  font-family: 'LatoSemiBold';
  font-size: 13px;
  line-height: 100%;
  border-radius: 3px;
  cursor: pointer;
  outline: 0;
  background-image: linear-gradient(to right top,#306ded,#2f78f1,#3283f3,#3a8ef6,#4598f7);
  color: #ffffff;
  border: 0;
}

.c0:hover {
  -webkit-box-shadow: inset 0 0 30px rgba(0,0,0,0.1);
  -moz-box-shadow: inset 0 0 30px rgba(0,0,0,0.1);
  box-shadow: inset 0 0 30px [object Object];
}

.c0:active {
  -webkit-box-shadow: inset 0 0 30px rgba(0,0,0,0.1);
  -moz-box-shadow: inset 0 0 30px rgba(0,0,0,0.1);
  box-shadow: inset 0 0 30px [object Object];
}

.c0::before {
  font-family: 'FontAwesome';
  font-weight: 600;
  font-size: 14px;
  margin-right: 10px;
  line-height: 100%;
  display: inline-block;
  vertical-align: middle;
}

.c0::before {
  content: '\\f014';
  vertical-align: inherit;
}

<button
  className="c0"
  color="primary"
  type="button"
/>
`;
